syntax = "proto3";

option csharp_namespace = "OpenCodeChems.Service";

package usersCodeChems;

service Users
{
    rpc RegisterNewUsers(RegisterRequest) returns (StatusPetitionResponse);
    rpc LoginPlayer(LoginRequest) returns (StatusPetitionResponse);
}

message RegisterRequest
{
  string username = 1;
  string password = 2;
  string name = 3;
  string email = 4;
  string nickname = 5;
}

message LoginRequest
{
  string username = 1;
  string password = 2;
}

message StatusPetitionResponse
{
  bool status = 1;
}